--- a/jsconfig.json
+++ b/jsconfig.json
@@ -2,8 +2,8 @@
   "compilerOptions": {
     "baseUrl": "src",
     "paths": {
-      "@components/*": ["/components/*"] ,
-      "@pages/*": ["/pages/*"]
+      "@components/*": ["components/*"] ,
+      "@pages/*": ["pages/*"]
     }
   }
 }
