--- a/jsconfig.json
+++ b/jsconfig.json
@@ -1,9 +1,5 @@
 {
   "compilerOptions": {
-    "baseUrl": "src",
-    "paths": {
-      "@components/*": ["components/*"] ,
-      "@pages/*": ["pages/*"]
-    }
+    "baseUrl": "src"
   }
 }
