--- a/package.json
+++ b/package.json
@@ -18,9 +18,12 @@
     "recharts": "^2.1.4",
     "web-vitals": "^1.0.1"
   },
+  "exports": {
+    "./*": "./*"
+  },
   "scripts": {
-    "start": "npx react-scripts start",
-    "build": "npx react-scripts build",
+    "start": "react-scripts start",
+    "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
